--- a/src/sass/_ui.scss
+++ b/src/sass/_ui.scss
@@ -471,6 +471,10 @@ table {
 	display: inline-block;
 	vertical-align: middle;
 
+	&.hidden {
+		display: none;
+	}
+
 	&-icon {
 		width: p2r(16);
 		height: p2r(16);
